tests/init_state/projection/branch_reads_cond.err.expected
error: at 5:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'b' is used before initialization
   |
 5 |             branch(copy b) [true: t, false: fbr]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
